Navlinks Mobile spacing resolved

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -147,7 +147,7 @@ button {
 .nav-links {
     display: flex;
   flex-direction: row;
-  gap: 16px;
+  gap: 10px;
   padding-left: auto;
 }
 
